Practica 5 - 11 03 2025 EDGAR SERRANO 2AVP
resubido

--- a/parcial 1/mipaginas.html
+++ b/parcial 1/mipaginas.html
@@ -11,5 +11,7 @@
     <p>
         MADRE MIA WILLY COMPAÑERO
     </p>
+    <img src="gokupro/goku.jpg" alt="">
+    <h1 style="color: aqua; background-color: rgb(148, 61, 202);">Es goku fachero</h1>
 </body>
 </html>
